removal of old NN, BasicEvolutionEngine and SnakeGame